Fri Sep  3 23:33:57 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* doc/*.html: providing more documentation.

Fri Sep  3 15:29:47 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* NEWS TODO doc/gamin.html doc/news.html: updating for the recent
	  releases and rebuilt.

Wed Sep  1 17:22:16 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: released 0.0.9

Wed Sep  1 15:50:49 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/Makefile.am server/gam_excludes.c server/gam_excludes.h
	  server/gam_poll.c server/gam_server.c: starting to add exclude
	  support where given path do no get kernel monitoring. Currently
	  statically excludes /mnt//* /media//* . Something more dynamic
	  might be needed.

Wed Sep  1 10:27:49 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c libgamin/gam_data.c: try to fix crashes with
	  konqueror, Red Hat bug #130967

Mon Aug 30 11:25:04 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: oops apparently I forgot to commit
	  the 0.0.8 release changes.

Thu Aug 26 17:28:57 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_poll.c server/gam_server.c: 
	  lot of debugging, the server was crashing, and the poll/kernel
	  switching was not done properly. Can still be improved for 
	  Changed events flood, but at least it does not crash anymore.

Wed Aug 25 21:35:36 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_inotify.c server/gam_poll.c
	  server/gam_server.c server/gam_server.h: applied patch from 
	  Martin Schlemmer to allow fallback to dnotify if inotify
	  back-end failed to initialize.

Wed Aug 25 16:38:54 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* Makefile.am NEWS configure.in doc/Makefile.am doc/contacts.html
	  doc/devel.html doc/downloads.html doc/gamin.html doc/index.html
	  doc/news.html doc/news.xsl doc/overview.html doc/site.xsl: building