@@ -1,3 +1,11 @@
+Mon Sep 20 16:21:24 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in server/Makefile.am server/gam_poll.c: applied a
+	  portability patch from Michael Banck
+	* server/gam_excludes.c server/gam_poll.c: added support for
+	  a per-user configuration file $HOME/.gaminrc , and some 
+	  fprintf cleanups
+
 Fri Sep  3 23:33:57 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* doc/*.html: providing more documentation.
